[package]
name = "echo-backend"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/orm"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
http = "1.3.1"
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
sqlx = { version = "0.8.3", features = ["uuid", "chrono", "sqlx-postgres", "runtime-tokio-rustls"] }
poem = { version = "3.1.7", features = ["default", "chrono"] }
poem-openapi = { version = "5.1.8", features = ["uuid", "sqlx", "chrono"] }
semantic-id = { version = "0.0.0", features = ["poem-openapi", "sqlx"]}
chrono = { version = "0.4.40", features = ["serde"] }

[features]
default = []
#server = ["sqlx"]

[package.metadata.docs.rs]
all-features = true
